# PythonMaterial

./: .gitignore  .pre-commit-config.yaml  00_hellowWorld.py  01_ArithmeticOperations.py  01_ArithmeticOperations2.py  Python Crash Course.pdf.REMOVED.git-id  Python_Material_Part_2.zip.REMOVED.git-id  README.md  TODO.txt  _config.yml  assignment.txt  doubt.txt  forcast  index.html  jinja_quick_load.py  params.json  pyproject.toml  python (core and Advanced) syllabus.docx  reg todo.txt  stackoverflow.html
00_Basic/: 01_OOP.py  03_OOP.py  04_OOP.py  05_relationalOperations.py  06_logicalOperations.py  08_lotteryTicket.py  09_numberGuessGame.py  11_collections.py  LinkedList_creation.py  display_number_pattern.py  email_ex.py  program.py  workingWithFilesAndFolders.py
01_Intermediate/: DisplayProgressBar.py  first.py  matplotlib_ex1.py  matplotlib_ex4.py  sample.py
02_Advanced/: stack_creation.py
A_Basic/: Assignments.txt  content_completed  dynamic_website_with_WSGI.py  dynamic_website_with_WSGI2.py  gaana.py  matplotlib_ex2.py  matplotlib_ex3.py  mutliprocessing_ex.py  one_liners.py  pandas_ex1.py  question.txt
B_Intermediate/: creating_pdf_file.py  example.py  fast_ping_sweep.py  fullcontact.py  imdb_crawler.py  new.py  pil_example.py  threaded_simple_httpserver.py  tkinterEx.py
C_Advanced/: stack_creation_2.py  validating_credit_cards_using_luhns_algorithm.py
New Complete Material/: Python Programming.ipynb  Python+Programming.html
algorithms_and_data_structures/: 01_Guessing_Game_with_Stupid_search.py
blogs/: round()_function_in_python.txt  string2Integer.txt  type_converting_functions.txt
python2/: README.md  assignment.txt  image_Steganography_ex.py  one_liners.py  python_2to3_ex.py
python3/: Arc_Listener.py  CCvault.db  Python_Material_Part_2.zip.REMOVED.git-id  Python_Open Queries.docx  Python_Recommended_Material.txt  TODO.py  TODO.txt  assignment.txt  gotchas_n_hiddenFeatures.txt  icc_cricket-notifications.py  interview_questions.txt  myfile.py  news_notifier.py  one_liners.py  python_2to3_ex.py  python_batch_planned_schedule.txt  python_email_sending_script_using_ssl.py  python_feb_batch_planned_schedule.txt  startlette_ex.py  steak-credit-cards.py  twitter_bot.py  twitter_bot.py.bak  waste.py  weak_reference.py  web_page_creation.py  xml_to_json_conversion.py  youtubeSentiment.py  youtubeVideosDownloading.py  (+1 more)
(+5578 files in other folders)
