[tool.poetry]
name = "pythonmaterial"
version = "0.1.0"
description = "Python Learning Material"
authors = ["udhay Prakash <uday3prakash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
requests = "^2.28.1"
jupyter = "^1.0.0"
ipython = "^8.5.0"
ipdb = "^0.13.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
Flask-JWT-Extended = "^4.4.4"
httpx = "^0.23.0"
colorama = "^0.4.6"
wget = "^3.2"
flask = "^2.2.2"
ariadne = "^0.17.1"
flask-sqlalchemy = "^3.0.3"
flask-cors = "^3.0.10"
pyarrow = "^11.0.0"
tortilla = "^0.5.0"
tabulate = "^0.9.0"
pdbpp = "^0.10.3"
moviepy = "^1.0.3"
pympler = "^1.0.1"


[tool.poetry.group.dev.dependencies]
nbconvert = {extras = ["webpdf"], version = "^7.2.5"}
setuptools = "^67.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
