[tool.poetry]
name = "pythonmaterial"
version = "0.1.0"
description = "Python Learning Material"
authors = ["udhay Prakash <uday3prakash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
requests = "^2.28.1"
jupyter = "^1.0.0"
ipython = "^8.5.0"
ipdb = "^0.13.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
Flask-JWT-Extended = "^4.4.4"
httpx = "^0.23.0"
colorama = "^0.4.6"
wget = "^3.2"
flask = "^2.2.2"
ariadne = "^0.17.1"
flask-sqlalchemy = "^3.0.3"
flask-cors = "^3.0.10"
pyarrow = "^11.0.0"
tortilla = "^0.5.0"
tabulate = "^0.9.0"
pdbpp = "^0.10.3"
moviepy = "^1.0.3"
pympler = "^1.0.1"
black = {extras = ["jupyter"], version = "^23.1.0"}
objgraph = "^3.5.0"
pyselenium = "^1.0.2"
aiohttp = "^3.8.4"
asyncio = "^3.4.3"
faker = "^18.3.1"
lxml = "^4.9.2"
sendgrid = "^6.10.0"
sphinx = "^6.1.3"
pytube = "^12.1.3"
marshmallow = "^3.19.0"
locust = "^2.15.1"
gunicorn = "^20.1.0"
waitress = "^2.1.2"
ipython-sql = "^0.5.0"
alembic = "^1.10.2"
flask-ngrok = "^0.0.25"
pytesseract = "^0.3.10"
loguru = "^0.7.0"
python-docx = "^0.8.11"
deltalake = "^0.9.0"
reportlab = "^4.0.0"
pypdf2 = "^3.0.1"
tablib = {extras = ["all"], version = "^3.4.0"}


[tool.poetry.group.dev.dependencies]
nbconvert = {extras = ["webpdf"], version = "^7.2.5"}
setuptools = "^67.4.0"
pyclean = "^2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
